--- a/src/fertilizers/ShopMainForm.form
+++ b/src/fertilizers/ShopMainForm.form
@@ -318,6 +318,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Logout"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbtlogoutActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
