--- a/src/fertilizers/ShopMainForm.form
+++ b/src/fertilizers/ShopMainForm.form
@@ -192,6 +192,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Create Supplier"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbtcreatesuppActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="jbtdisplaysupp">
               <Properties>
